# trossen_sdk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BRANCH_NOTES.md  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  camera.cpp  config.cpp  control_script.cpp  docker-compose.yml  main.cpp  pyproject.toml  replay.cpp  teleop.cpp  torch.cpp  trossen_data_collection_sdkConfig.cmake.in
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs.yaml  lint.yml
apps/soma/: CMakeLists.txt
apps/trossen_sdk_ui/: .gitignore  DEVELOPMENT.md  DOCKER_TROUBLESHOOTING.md  ROADMAP.md  docker-compose.yml
apps/trossen_sdk_ui/backend/: BACKEND.md  CMakeLists.txt  Dockerfile  data.json  dev_rebuild.sh  dev_watch.sh  main.cpp
apps/trossen_sdk_ui/backend/include/backend/: config_manager.hpp  hardware_helpers.hpp  session_actions.hpp
apps/trossen_sdk_ui/backend/src/: config_manager.cpp  hardware_helpers.cpp  session_actions.cpp
benchmarks/: CMakeLists.txt  README.md  benchmark_config.json  benchmark_config_jetson.json  camera_benchmark.cpp  jetson_benchmark.cpp  null_backend.cpp
cmake/: Findtrossen_vr.cmake
cmake/patches/: SCServo.patch
config/: bimanual_widowx_leader.json  bimanual_widowxai.json  mobile.json  robot_configs.json  sdk_config.json  solo.json  stationary.json  trossen_ai_solo.json  trossen_ai_solo_leader.json  trossen_ai_stationary.json  widowx_leader.json  widowxai.json
docs/: CONCEPTS.md  DESIGN.md  DESIGN_V2.md  INSTALLATION.md  ROADMAP.md  cleanup_notes.md  conf.py  configuration.rst  convert.rst  index.rst  installation.rst  record.rst  replay.rst  requirements.txt  visualize.rst
docs/_downloads/: trossen_mobile_ai.foxglove_layout.json  trossen_solo_ai.foxglove_layout.json  trossen_stationary_ai.foxglove_layout.json
docs/_static/: tr_style.css
docs/hardware/: REALSENSE_CAMERA.md
docs/readme/: configuration.md  installation.md  lerobot.md  usage.md
examples/: CMakeLists.txt  MCAP_TO_LEROBOT.md  README.md  TROSSEN_MCAP_TO_LEROBOT_V2.md  backend_registry_demo.cpp  camera_benchmark.cpp  demo_utils.cpp  demo_utils.hpp  hardware_registry_demo.cpp  mcap_to_lerobot.cpp  mock_producers.cpp  producer_registry_demo.cpp  replay_mcap_jointstate.cpp  replay_trossen_mcap_jointstate.cpp  slate_base_demo.cpp  so101_lerobot.cpp  so101_lerobot_v2.cpp  teleop_arm_component_demo.cpp  trossen_ai_solo.cpp  trossen_mcap_to_lerobot_v2.cpp  trossen_mobile_ai_demo.cpp  trossen_solo_ai.cpp  trossen_solo_ai_demo.cpp  trossen_stationary_ai_demo.cpp  widowxai.cpp  widowxai_bimanual.cpp  widowxai_bimanual_mobile.cpp  widowxai_bimanual_realsense.cpp  widowxai_lerobot.cpp  widowxai_lerobot_async.cpp  widowxai_lerobot_v2.cpp  widowxai_lerobot_v2_async.cpp
examples/callback_demo/: callback_demo.cpp
examples/mobile/: config.json  trossen_mobile_ai.cpp
examples/mock_producer_demo/: mock_producer_demo.cpp
examples/realsense_rgb/: config.json  config_depth.json
examples/so101/: config.json  so101_lerobot_v2.cpp
examples/solo/: config.json  trossen_solo_ai.cpp
examples/stationary/: config.json  trossen_stationary_ai.cpp
examples/trossen_keyboard_teleop/: config.json  trossen_keyboard_teleop.cpp
examples/trossen_mobile_ai/: README.md  config.json  trossen_mobile_ai.cpp
examples/trossen_solo_ai/: README.md  config.json  trossen_solo_ai.cpp
examples/trossen_stationary_ai/: README.md  config.json  trossen_stationary_ai.cpp
examples/trossen_vr_mobile/: README.md  config.json  trossen_vr_mobile.cpp
examples/trossen_vr_stationary/: README.md  config.json  mdns_helper.py  trossen_vr_stationary.cpp
include/trossen_ai_robot_devices/: trossen_ai_cameras.hpp  trossen_ai_driver.hpp  trossen_ai_robot.hpp
include/trossen_data_collection_sdk/: arms_move.hpp
include/trossen_dataset/: dataset.hpp
include/trossen_sdk/: trossen_sdk.hpp  types.hpp  version.hpp
include/trossen_sdk_utils/: config_utils.hpp  (+4 more)
python/: trossen_sdk.cpp  trossen_sdk_ndarray_caster.hpp  trossen_sdk_type_casters.hpp
scripts/: CMakeLists.txt  README.md  install_realsense.sh  record.cpp  replay.cpp  replay_config.json  replay_trossen_mcap_jointstate.cpp  sleep.cpp  teleop.cpp  trossen_mcap_to_lerobot_v2.cpp  video_conversion.cpp
scripts/find_cameras/: README.md  find_cameras.cpp
scripts/find_hardware/: README.md  find_hardware.cpp
scripts/replay_trossen_mcap_jointstate/: README.md  config.json  replay_trossen_mcap_jointstate.cpp
scripts/trossen_mcap_to_lerobot_v2/: README.md  config.json  trossen_mcap_to_lerobot_v2.cpp
src/: arms_move.cpp  control_utils.cpp  dataset.cpp  trossen_ai_driver.cpp  trossen_ai_robot.cpp
tests/: CMakeLists.txt  README.md  test_announce.cpp  test_backend_registry.cpp  test_config.cpp  test_config.json  test_keyboard_input_utils.cpp  test_lerobot_depth_utils.cpp  test_lerobot_utils.cpp  test_null_backend.cpp  test_observer_base.cpp  test_observer_registry.cpp  test_producer_registry.cpp  test_push_producer_base.cpp  test_push_producer_registry.cpp  test_queue_adapter.cpp  test_realsense_push_producer_metadata.cpp  test_record.cpp  test_record_types.cpp  test_rerun_observer.cpp  test_scheduler.cpp  test_session_manager.cpp  test_session_manager_discard.cpp  test_session_manager_observers.cpp  test_session_manager_push_producer.cpp  test_sink.cpp  test_stats_validation.cpp  test_teleop_config.cpp  test_teleop_controller.cpp  test_teleop_space_helpers.cpp  test_timestamp.cpp
webapp/: README.md  USER_GUIDE.md  docker-compose.yml
webapp/backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
webapp/backend/alembic/: env.py  script.py.mako
webapp/backend/alembic/versions/: 01150f7268c9_create_session_table.py  688e9ad282b8_create_system_and_app_settings_tables.py
webapp/backend/app/: converter.py  dataset_settings.py  datasets.py  db.py  hw_status.py  hw_test.py  hw_test_runner.py  io_utils.py  main.py  models.py  paths.py  recorder.py  recorder_runner.py  sessions.py  systems.py  ws_bus.py
webapp/backend/app/factory_defaults/: mobile.json  solo.json  stationary.json
(+263 files in other folders)
