# Fetch Google Test
include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG v1.14.0
)
FetchContent_MakeAvailable(googletest)

# Unit test executables
add_executable(test_timestamp test_timestamp.cpp)
target_link_libraries(test_timestamp PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_record test_record.cpp)
target_link_libraries(test_record PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_null_backend test_null_backend.cpp)
target_link_libraries(test_null_backend PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_backend_registry test_backend_registry.cpp)
target_link_libraries(test_backend_registry PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_push_producer_registry test_push_producer_registry.cpp)
target_link_libraries(test_push_producer_registry PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_push_producer_base test_push_producer_base.cpp)
target_link_libraries(test_push_producer_base PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_session_manager_push_producer test_session_manager_push_producer.cpp)
target_link_libraries(test_session_manager_push_producer PRIVATE trossen_sdk GTest::gtest_main)

if(TROSSEN_ENABLE_REALSENSE)
  add_executable(test_realsense_push_producer_metadata test_realsense_push_producer_metadata.cpp)
  target_link_libraries(test_realsense_push_producer_metadata PRIVATE trossen_sdk GTest::gtest_main)
  target_compile_definitions(test_realsense_push_producer_metadata PRIVATE TROSSEN_ENABLE_REALSENSE)
endif()

add_executable(test_lerobot_depth_utils test_lerobot_depth_utils.cpp)
target_link_libraries(test_lerobot_depth_utils PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_record_types test_record_types.cpp)
target_link_libraries(test_record_types PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_config test_config.cpp)
target_link_libraries(test_config PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_lerobot_utils test_lerobot_utils.cpp)
target_link_libraries(test_lerobot_utils PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_queue_adapter test_queue_adapter.cpp)
target_link_libraries(test_queue_adapter PRIVATE trossen_sdk GTest::gtest_main)

add_executable(test_producer_registry test_producer_registry.cpp)
target_link_libraries(test_producer_registry PRIVATE trossen_sdk GTest::gtest_main)

# Enable CTest integration
include(GoogleTest)
gtest_discover_tests(test_timestamp)
gtest_discover_tests(test_record)
gtest_discover_tests(test_null_backend)
gtest_discover_tests(test_backend_registry)
gtest_discover_tests(test_push_producer_registry)
gtest_discover_tests(test_push_producer_base)
gtest_discover_tests(test_session_manager_push_producer)
if(TROSSEN_ENABLE_REALSENSE)
  gtest_discover_tests(test_realsense_push_producer_metadata)
endif()
gtest_discover_tests(test_lerobot_depth_utils)
gtest_discover_tests(test_record_types)
gtest_discover_tests(test_config)
gtest_discover_tests(test_lerobot_utils)
gtest_discover_tests(test_queue_adapter)
gtest_discover_tests(test_producer_registry)
